--- a/README
+++ b/README
@@ -1,44 +1,14 @@
-= VoragineCore -- General information =
+= VoragineDB -- General information =
 
-Copyright (C) TrinityCore (http://www.trinitycore.org)
-Copyright (C) VoragineCore (http://www.projectvoragine.com)
+Voragine db its a db project based on lastest vertion of CTDB for 3.3.5a,
+we want to create a very good db based in our work and info extracted from
+different sources included blizz.
 
-  Voragine Core is free software; you can redistribute it and/or modify
-  it under the terms of the GNU General Public License as published by
-  the Free Software Foundation; either version 2 of the License, or
-  (at your option) any later version.
+We will release DB like every 2 weeks with a lot of updates, fixes and changes
+we will not put updates for world db in db repo because we dont want to have
+leechers (people that copy our commits but dont give us our proper credit).
 
-  This program is distributed in the hope that it will be useful,
-  but WITHOUT ANY WARRANTY; without even the implied warranty of
-  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  GNU General Public License for more details.
+If you want to help us with some fixes and try to help in db development,
+go to our forum and make a db patch submision.
 
-  You should have received a copy of the GNU General Public License
-  along with this program; if not, write to the Free Software
-  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
-
-  In addition, as a special exception, the Voragine Core project
-  gives permission to link the code of its release of Voragine Core with
-  the OpenSSL project's "OpenSSL" library (or with modified versions of
-  it that use the same license as the "OpenSSL" library), and distribute
-  the linked executables.  You must obey the GNU General Public License
-  in all respects for all of the code used other than "OpenSSL".  If you
-  modify this file, you may extend this exception to your version of the
-  file, but you are not obligated to do so.  If you do not wish to do
-  so, delete this exception statement from your version.
-
-VoragineCore is a World of Warcraft game server application. It is derived
-from MaNGOS, the Massive Network Game Object Server, and is based on the
-code of that project.
-
-For further information on the VoragineCore project, please visit our
-project website at http://www.projectvoragine.com.
-
-API documentation can be obtained by running the "make doc" command inside
-the doc directory.
-
-SQL files to create the database can be found in the sql directory. Files
-to update your database from an older revision/version can be found in the
-sql/updates directory.
-
-See the docs/UnixInstall.txt file for installation instructions on Linux.
+Http://www.projectvoragine.com
